# qt-gruenhagen-browser

./: .gitignore  LICENSE  README.md  main.py  navigation_system.py  pyproject.toml  pytest.ini
assets/: app-icon.icns
behavior_tests/: test_how_signals_work.py
browser_engine/: __init__.py  browser_engine.py
browser_ui/: __init__.py  browser_ui.py
core/: __init__.py  navigation_system.py
engine/: __init__.py  browsing_context.py  web_page.py
services/: __init__.py  browsing_context.py
widgets/: __init__.py  address_bar.py  browser_window.py  navigation_bar.py  web_view.py
widgets/navigation_bar/: __init__.py  address_bar.py  navigate_back_button.py  navigate_forward_button.py  navigation_bar.py  navigation_button.py
